...
                    android:padding="8dp"
                    android:text="OK"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/generaldialog_button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:stateListAnimator="@animator/button_anim"
...
                    android:padding="8dp"
                    android:text="No"
                    android:textSize="18sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/generaldialog_button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:stateListAnimator="@animator/button_anim"
...
