...
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/createreport_input_description"
                        style="@style/_EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
...
                android:focusable="true"
                android:stateListAnimator="@animator/button_anim"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp">

                <TextView
                    android:id="@+id/createreport_button_submit"
                    style="@style/_DarkButton"
                    android:layout_height="wrap_content"
                    android:text="Submit Report" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
...
